# mongo-csfle-beanie-fastapi

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/config/: __init__.py
src/db/: mongo.py
tests/: test_all.py
